# cuTAGI

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASES.md  config.py  cpu.dockerfile  docker_main.sh  main  main.cpp  main.cu  plot_smooth_states.py  pyproject.toml  regression_test.py  requirements.txt  setup.cfg  setup.py  visualizer.py
.github/: Dockerfile.linuxw  pull_request_template.md
action_scripts/: install_cuda_ubuntu.sh  install_python_macos.sh
benchmarks/: README.md  benchmark_table_large_uci_regression_het.py  benchmark_table_large_uci_regression_het_gain_1.py  benchmark_table_small_uci_regression.py  benchmark_table_small_uci_regression_het.py  benchmark_table_small_uci_regression_het_gain_1.py  large_uci_regression_het.py  large_uci_regression_het_earlystop.py  large_uci_regression_het_gain_1.py  large_uci_regression_het_gain_1_earlystop.py  large_uci_regression_het_gain_1_optimal_epoch.py  large_uci_regression_het_optimal_epoch.py  requirements.txt  small_uci_regression.py  small_uci_regression_earlystop.py  small_uci_regression_het.py  small_uci_regression_het_earlystop.py  small_uci_regression_het_gain_1.py  small_uci_regression_het_gain_1_earlystop.py  small_uci_regression_het_gain_1_optimal_epoch.py  small_uci_regression_het_optimal_epoch.py  small_uci_regression_optimal_epoch.py
cfg/: 1fc_full_cov_toy.txt  1fc_toy.txt  2conv.txt  2conv_bn.txt  2fc.txt  2fc_norm.txt  2fc_uci.txt  2lstm.txt  cfg_bh_2fc.txt  cfg_mha.txt  cfg_mnist_2conv.txt  cfg_mnist_2conv_bn.txt  cfg_mnist_2fc.txt  cfg_mnist_3conv.txt  cfg_mnist_ae.txt  cfg_mnist_heteros_fc.txt  cfg_mnist_homosce_fc.txt  cfg_time_series_2lstm.txt  cfg_toy_derivative_fc.txt  cfg_toy_example_fc.txt  cfg_toy_fc.txt  cfg_toy_full_cov_fc.txt  cfg_toy_heteros_fc.txt  cfg_toy_homosce_fc.txt  cfg_toy_ni_fc.txt  decoder.txt  encoder.txt  fc_heteros_mnist.txt  fc_heteros_toy.txt  fc_homosce_mnist.txt  fc_homosce_toy.txt  fc_noise_inference_toy.txt  fc_toy_derivative.txt  mha.txt  net.txt  net_conv.txt  net_d.txt  net_e.txt  resnet18_10_classes.txt  user_input.txt  (+1 more)
docs/: api.rst  conf.py  dev_guide.md  download_imagenet.md  examples.rst  github_dev_guide.md  index.rst  installation.md  multi_gpu.md  requirements_docs.txt  tagi_network.md  wandb_setup.md
examples/: Test_normalization.py  agvi_heteros_bench.py  autoencoder.py  batchnorm_viz.py  cifar10_calibration.ipynb  cifar10_calibration_torch.ipynb  cifar_resnet_bench.py  classification.py  counting_letters.py  data_loader.py  ddp_cifar_resnet.py  ddp_classification.py  ddp_classification_v2.py  ddp_imagenet.py  ddp_mnist.py  ddp_mnist_torch_dataloader.py  get_input_states_test.py  imagenet_resnet_bench.py  mnist_bench.py  param_stat_table.py  param_viz.py  regression.py  regression_heteros.py  resnet18_cifar10.py  softmax_cifar.py  softmax_cifar10.py  softmax_mnist.py  tagi_alexnet_model.py  tagi_resnet_model.py  test_getLSTM_states.py  test_load_state_dict.py  time_series_forecasting.py  time_series_smoother.py  time_series_smoother_v1.py  torch_resnet_model.py  traffic_2008_01_14 _debugger.py  traffic_2008_01_14.py
include/: MixtureLReLU_layer.h  activation.h  activation_cuda.cuh  activation_fun.cuh  activation_fun_cpu.h  activation_layer_cpu.h  attention.h  base_layer.h  base_layer_cuda.cuh  base_output_updater.h  batchnorm_layer.h  batchnorm_layer_cuda.cuh  common.h  common_cuda_kernel.cuh  config.h  conv2d_cuda_kernel.cuh  conv2d_layer.h  conv2d_layer_cuda.cuh  convtranspose2d_cuda_kernel.cuh  convtranspose2d_layer.h  convtranspose2d_layer_cuda.cuh  cost.h  cuda_error_checking.cuh  cuda_utils.h  custom_logger.h  data_struct.h  data_struct_cuda.cuh  data_transfer.cuh  data_transfer_cpu.h  dataloader.h  ddp.h  debugger.h  derivative_calcul.cuh  derivative_calcul_cpu.h  derivative_calculation_cpu.h  distributed.h  embedding_bag_cpu.h  embedding_cpu.h  embedding_cuda.cuh  fc_cpu_v2.h  (+63 more)
pytagi/: __init__.py  __version.py  cuda.py  metric.py  tagi_network.py  tagi_utils.py  test_version.py
python_examples/: autoencoder.py  autoencoder_runner.py  classification.py  classification_AGVI.py  classification_runner.py  data_loader.py  derivative_regression_runner.py  fullcov_regression_runner.py  heteros_regression_runner.py  large_UCI_regression_Het.py  large_UCI_regression_Het_earlystop.py  large_UCI_regression_Het_optimal_Epoch.py  model.py  regression.py  regression_runner.py  small_UCI_experiment.py  small_UCI_regression.py  small_UCI_regression_Het.py  small_UCI_regression_Het_earlystop.py  small_UCI_regression_Het_no_gain.py  small_UCI_regression_Het_no_gain_earlystop.py  small_UCI_regression_Het_no_gain_optimal_Epoch.py  small_UCI_regression_Het_optimal_Epoch.py  small_UCI_regression_earlystop.py  small_UCI_regression_optimal_Epoch.py  softmax_classification_runner.py  time_series_forecaster.py  time_series_runner.py
python_examples_v1/: classification.py  data_loader.py  time_series_forecasting.py
python_src/: classification.py  data_loader.py  metric.py  model.py  regression.py  tagi_network.py  tagi_utils.py  time_series_forecaster.py
results_small_UCI_TAGI/: Benchmark_Table_Baseline.py  small_UCI_regression_table.txt
results_small_UCI_TAGI_AGVI_Het/: Benchmark_Table_Het.py  combined_results.py  small_UCI_regression_Het_table.txt  text-to-csv.py
results_small_UCI_TAGI_AGVI_Het_NoGain/: Benchmark_Table_Het_NoGain.py  plot_learning_curves_optimal_epoch.py  small_UCI_regression_Het_NoGain_table.txt  text-to-csv.py
saved_param/: 1D_1fc_toy_1_mw.csv  1D_1fc_toy_2_Sw.csv  1D_1fc_toy_3_mb.csv  1D_1fc_toy_4_Sb.csv  1D_fc_noise_inference_toy_1_mw.csv  1D_fc_noise_inference_toy_2_Sw.csv  1D_fc_noise_inference_toy_3_mb.csv  1D_fc_noise_inference_toy_4_Sb.csv  1D_fc_toy_derivative_1_mw.csv  1D_fc_toy_derivative_2_Sw.csv  1D_fc_toy_derivative_3_mb.csv  1D_fc_toy_derivative_4_Sb.csv  lstm_demo_2lstm_1_mw.csv  lstm_demo_2lstm_2_Sw.csv  lstm_demo_2lstm_3_mb.csv  lstm_demo_2lstm_4_Sb.csv  test_2fc_3_mb.csv  test_2fc_4_Sb.csv  (+13 more)
(+1257 files in other folders)
