[metadata]
name = pytagi
description = Tractable Approximate Gaussian Inference
long_description = cuTAGI is an open-source Bayesian neural networks library that is based on Tractable Approximate Gaussian Inference (TAGI) theory
author = Luong-Ha Nguyen and James-A. Goulet
author_email = luongha.nguyen@gmail.com, james.goulet@polymtl.ca
url = https://github.com/lhnguyen102/cuTAGI
license = MIT

classifers =
    Development Status :: Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Probabilistic Deep Neural Networks
    Programming Language :: C++
    Programming Language :: CUDA
    Programming Language :: Python :: 3 :: Only
    License :: MIT License

keywords =
    Bayesian
    Neural Networks
    Machine Learning
    Tractability
    C++11
    CUDA

project_urls =
    Download_url = https://github.com/lhnguyen102/cuTAGI

[options]
python_requires = >=3.10
include_package_data = True
packages=find:

[options.packages.find]
exclude =
    test
    test.*
    examples
    examples.*
    save_param
    save_param.*
    saved_results
    saved_results.*
    data
    data.*
    __pycache__
    __pycache__.*

[options.package_data]
pytagi = version.txt
pytagi_data =
    LICENSE
    README.md
    pyproject.toml
    setup.py
    setup.cfg
    *.cmake






